renamed variables added first tests
